Fix top margin to better align bottom of contact form.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,7 +20,7 @@ h1 {
     text-transform: uppercase; /* Set all text to uppercase */
     font-family: "Trebuchet MS", Optima;
     text-align: center;
-    margin-top: 3%;
+    margin-top: -0.5%;
     color: #1a1a1a;
 }
 
@@ -299,6 +299,6 @@ input[type=submit]:hover {
 form {
     border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 10px;
+    padding: 5px;
     font-family: "Trebuchet MS", Optima;
 }
